# internal/app/habit/handler.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 	"testing_trainer/internal/entities"
 	"testing_trainer/utils/token"
 )
@@ -14,12 +15,14 @@ type Handler struct {
 
 type UseCase interface {
 	CreateHabit(ctx context.Context, username string, habit entities.Habit) (int64, error)
+	ListUserHabits(ctx context.Context, username string) ([]entities.Habit, error)
 }
 
 func NewHabitHandler(r *gin.RouterGroup, uc UseCase) {
 	h := Handler{uc: uc}
 
 	r.POST("/habits", h.CreateHabit)
+	r.GET("/habits", h.ListUserHabits)
 }
 
 // CreateHabit godoc
@@ -30,28 +33,57 @@ func NewHabitHandler(r *gin.RouterGroup, uc UseCase) {
 // @Accept json
 // @Produce json
 // @Param requestBody body CreateHabitRequest true "Create habit"
+// @Param Authorization header string true "Bearer"
 // @Success 200 {string} ok
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
 // @Router /tracker/habits [post]
 func (h *Handler) CreateHabit(c *gin.Context) {
-	var createHabit entities.Habit
+	var createHabitRequest CreateHabitRequest
 
 	username, err := token.ExtractUsernameFromToken(c)
 	if err != nil {
 		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
 	}
 
-	if err := c.ShouldBindJSON(&createHabit); err != nil {
+	if err := c.ShouldBindJSON(&createHabitRequest); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if err := createHabit.Validate(); err != nil {
+	if err := createHabitRequest.Validate(); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
 
-	_, err = h.uc.CreateHabit(c, username, createHabit)
+	id, err := h.uc.CreateHabit(c, username, toEntityHabit(createHabitRequest))
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 	}
 
-	c.JSON(http.StatusCreated, gin.H{"message": "Habit created"})
+	c.JSON(http.StatusCreated, gin.H{"id": strconv.Itoa(int(id))})
+}
+
+// ListUserHabits godoc
+// @Summary list user habits endpoint
+// @Schemes
+// @Description Lists all habits for the authenticated user
+// @Tags example
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer"
+// @Success 200 {array} ListUserHabitsResponse "List of user habits"
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /tracker/habits [get]
+func (h *Handler) ListUserHabits(c *gin.Context) {
+	username, err := token.ExtractUsernameFromToken(c)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+	}
+
+	habits, err := h.uc.ListUserHabits(c, username)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	c.JSON(http.StatusOK, toListUserHabitsResponse(username, habits))
 }
